# rust_resource_viewer

./: Cargo.toml  readme.md
src/: main.rs
