[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
sysinfo = { version = "0.29.7", features = ["default"] }
tui = {version = "0.19" }
crossterm = { version = "0.26.1" }
anyhow = { version = "1.0.72" }